update upcomingevents.py to use Calendar API v3 and work with the new hdr App Engine instance

--- a/upcomingevents/app.yaml
+++ b/upcomingevents/app.yaml
@@ -1,12 +1,9 @@
-application: tombapps
+application: tombapps-hdr
 version: 1
-runtime: python
+runtime: python27
 api_version: 1
+threadsafe: yes
 
 handlers:
 - url: /upcomingevents
-  script: upcomingevents.py
-
-- url: /admin/.*
-  script: $PYTHON_LIB/google/appengine/ext/admin
-  login: admin
+  script: upcomingevents.app
